[package]
name = "marlin_arkworks_backend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

acvm = { git = "https://github.com/noir-lang/noir", branch = "refactor-pwg" } 
arkworks_backend = { git = "https://github.com/noir-lang/arkworks_backend", branch = "refactor-pwg" }

sha2 = "0.9.3"
blake2 = "0.9.1"
sled = "0.34.6"

dirs = "3.0"
downloader = "0.2.6"

indicatif = "0.15.0"
regex = "1.4.0"
once_cell = "1.5.2"

num-bigint = "0.4"
num-traits = "0.2.8"

[dev-dependencies]
tempfile = "3.2.0"

[features]
# not specifying a default sometimes gives an error that "extern location for acvm does not exist" on some imports locally, 
# but it still builds when specifying `marlin_arkworks_backend/[field name]` in the Cargo.toml inside the nargo crate
# uncomment the default line to remove extern location errors, it is most likely a coloring error
# default = ["bls12_381"] 
bn254 = ["arkworks_backend/bn254"]
bls12_381 = ["arkworks_backend/bls12_381"]
