[package]
name = "marlin_arkworks_backend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

acvm = "0.3.1"
arkworks_backend = { git = "https://github.com/noir-lang/arkworks_backend", rev = "2f3f0db182004d5c01008c741bf519fe6798e24d" }

[features]
# not specifying a default sometimes gives an error that "extern location for acvm does not exist" on some imports locally,
# but it still builds when specifying `marlin_arkworks_backend/[field name]` in the Cargo.toml inside the nargo crate
# uncomment the default line to remove extern location errors, it is most likely a coloring error
# default = ["bls12_381"]
bn254 = ["arkworks_backend/bn254"]
bls12_381 = ["arkworks_backend/bls12_381"]
